# securitysmith

./: .clippy.toml  .gitignore  .semgrepignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  rustfmt.toml  vite.config.ts
crates/ai/: Cargo.toml
crates/ai/src/: ai.rs
crates/analytics/: Cargo.toml
crates/analytics/src/: analytics.rs  lib.rs
crates/calendar/: Cargo.toml
crates/calendar/src/: calendar.rs  lib.rs
crates/checklists/: Cargo.toml
crates/checklists/src/: checklists.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli_def.rs  color.rs  error.rs  hardening.rs  main.rs
crates/cli/tests/: integration.rs
crates/compliance/: Cargo.toml
crates/compliance/src/: compliance.rs  lib.rs
crates/core/: Cargo.toml
crates/core/migrations/: 002_crypto_meta.sql  003_recovery.sql  005_engagements.sql  006_credentials.sql  010_documents.sql  011_invoices.sql  012_dismissed_reminders.sql  013_news.sql  020_attachments.sql  028_search_index.sql  029_notifications.sql  030_compliance.sql  031_projects.sql  032_project_contacts.sql  033_engagement_type_labels.sql  034_client_history.sql  035_alter_clients.sql  036_alter_engagements.sql  037_uncategorized_projects.sql
crates/core/src/: crypto.rs  db.rs  error.rs  ids.rs  lib.rs  state.rs  test_helpers.rs
crates/core/src/commands/: activity_log.rs  attachments.rs  auth.rs  clients.rs  contacts.rs  credentials.rs  engagement_types.rs  engagements.rs  findings.rs  findings_import.rs  mod.rs  notifications.rs  portability.rs  project_contacts.rs  projects.rs  retests.rs  scope.rs  search.rs  settings.rs
crates/documents/: Cargo.toml
crates/documents/src/: documents.rs  lib.rs
crates/email/: Cargo.toml
crates/email/src/: email.rs  lib.rs
crates/frontmatter/: Cargo.toml
crates/frontmatter/src/: lib.rs
crates/invoices/: Cargo.toml
crates/invoices/src/: invoices.rs  lib.rs
crates/news/: Cargo.toml
crates/news/src/: lib.rs  news.rs
crates/parsers/: Cargo.toml
crates/parsers/src/: burp.rs  csv_import.rs  lib.rs  nessus.rs  nmap.rs  nuclei.rs  zap.rs
crates/report-engine/: Cargo.toml
crates/report-engine/src/: lib.rs
crates/reports/: Cargo.toml
crates/reports/src/: lib.rs  reports.rs
crates/templates/: Cargo.toml
crates/templates/src/: lib.rs  templates.rs
crates/time-tracking/: Cargo.toml
crates/time-tracking/src/: lib.rs  time_entries.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: check.rs  checklists.rs  client.rs  credentials.rs  documents.rs  entities.rs  evidence.rs  findings.rs  global.rs  import.rs  lib.rs  notes.rs  render.rs  requirements.rs  scope.rs  search.rs  sections.rs  stats.rs  templates.rs  test_helpers.rs  typst_engine.rs
crates/workspace/src/typst_templates/: custom.typ  finding.typ  nda.typ  note.typ  proposal.typ  report.typ  requirement.typ  roe.typ  scope.typ  sow.typ
crates/workspace/templates/: client.toml  engagement.toml  finding.md  project.toml  report.md  requirement.md  scope.md  sow.md  workspace.toml
docs/: README.md  backup.md  checklists.md  config-reference.md  credentials.md  documents.md  engagement.md  evidence.md  findings.md  getting-started.md  hierarchy.md  reports.md  requirements.md  scope-notes.md  search.md  templates.md  workspace.md
docs/user-manual/: advanced.md  ai.md  calendar.md  core-workflows.md  email.md  first-run.md  installation.md  invoicing.md  news.md  templates.md  troubleshooting.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: md_to_typst.rs
man/: sm-check.1  sm-checklist.1  sm-credential.1  sm-document.1  sm-engagement.1  sm-evidence.1  sm-finding.1  sm-ls.1  sm-new.1  sm-note.1  sm-report.1  sm-req.1  sm-rm.1  sm-scope.1  sm-search.1  sm-sow.1  sm.1
migrations/: 001_init.sql  004_clients.sql  007_findings.sql  008_templates.sql  009_reports.sql  014_tech_stack.sql  021_client_contacts.sql  022_remediation.sql  023_scope_items.sql  024_time_entries.sql  027_checklists.sql
scripts/: build.sh  checks.sh  verify-all.sh  verify-build.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ARCHITECTURE.md  crypto.rs  db.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: activity_log.rs  ai.rs  analytics.rs  attachments.rs  auth.rs  calendar.rs  checklists.rs  clients.rs  compliance.rs  contacts.rs  credentials.rs  documents.rs  email.rs  engagements.rs  findings.rs  findings_import.rs  invoices.rs  mod.rs  news.rs  notifications.rs  portability.rs  reports.rs  retests.rs  scope.rs  search.rs  settings.rs  templates.rs  time_entries.rs
src-tauri/src/parsers/: burp.rs  csv_import.rs  nessus.rs  nmap.rs  nuclei.rs  zap.rs
src-tauri/src/report_engine/: mod.rs
src-tauri/src/templates/: gen.mjs  other.json  owasp_api.json  owasp_llm.json  owasp_web.json
src/api/: activity_log.ts  auth.ts  checklists.ts  compliance.ts  contacts.ts  documents.ts  email.ts  engagements.ts  findings.ts  findings_import.ts  invoices.ts  settings.ts  templates.ts
src/components/: AiChat.tsx  AnalyticsPanel.tsx  AppShell.tsx  AttachmentUploader.tsx  CalendarView.tsx  ChecklistView.tsx  ClientAlerts.tsx  ClientForm.tsx  ClientList.tsx  CommandPalette.tsx  ComplianceView.tsx  Dashboard.tsx  DashboardStats.tsx  DocumentBuilder.tsx  DocumentList.tsx  EmailComposer.tsx  EngagementForm.tsx  EngagementList.tsx  ExportWizard.tsx  FindingDetail.tsx  FindingForm.tsx  FindingImport.tsx  FindingList.tsx  ImportWizard.tsx  InvoiceBuilder.tsx  InvoiceList.tsx  Minibuffer.tsx  NewsFeed.tsx  RecoveryPhraseModal.tsx  ReportBuilder.tsx  ReportList.tsx  ScopeEditor.tsx  SettingsAppearance.tsx  SettingsPage.tsx  TemplateEditor.tsx  TemplateLibrary.tsx  TimeTracker.tsx  UnlockScreen.tsx
src/components/shared/: EntityCard.tsx  SearchToolbar.tsx  StatusBadge.tsx  TagGroup.tsx
src/core/api/: attachments.ts  clients.ts  credentials.ts  notifications.ts  portability.ts  retests.ts  scope.ts  search.ts  settings.ts
src/core/components/: ActivityLog.tsx  AppShell.tsx  (+14 more)
src/extensions/: index.ts  manifests.ts
src/theme/: tokens.ts
src/types/: appearance.ts
(+42 files in other folders)
