[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/core",
    "crates/parsers",
    "crates/report-engine",
    "crates/templates",
    "crates/reports",
    "crates/documents",
    "crates/invoices",
    "crates/ai",
    "crates/analytics",
    "crates/calendar",
    "crates/news",
    "crates/checklists",
    "crates/compliance",
    "crates/time-tracking",
    "crates/email",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled-sqlcipher-vendored-openssl"] }
argon2 = { version = "0.5.3", features = ["std"] }
bip39 = { version = "2", features = ["std"] }
aes-gcm = { version = "0.10", features = ["aes"] }
aead = { version = "0.5" }
rand = "0.10.1"
hex = "0.4.3"
tokio = { version = "1.52.3", features = ["rt"] }
reqwest = { version = "0.13.3", features = ["json"] }
rss = "2.0"
quick-xml = { version = "0.37.5", features = ["serialize"] }
csv = "1.3.1"
lettre = { version = "0.11.15", default-features = false, features = ["smtp-transport", "tokio1", "tokio1-rustls-tls", "builder", "mime03"] }
chrono = "0.4.41"
base64 = "0.22.1"
printpdf = "0.7.0"
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
tempfile = "3.27.0"
thiserror = "2"
validator = "0.20"
ss-core = { path = "crates/core", package = "securitysmith-core" }
ss-parsers = { path = "crates/parsers", package = "securitysmith-parsers" }
ss-report-engine = { path = "crates/report-engine", package = "securitysmith-report-engine" }
ss-templates = { path = "crates/templates", package = "securitysmith-templates" }
ss-reports = { path = "crates/reports", package = "securitysmith-reports" }
ss-documents = { path = "crates/documents", package = "securitysmith-documents" }
ss-invoices = { path = "crates/invoices", package = "securitysmith-invoices" }
ss-ai = { path = "crates/ai", package = "securitysmith-ai" }
ss-analytics = { path = "crates/analytics", package = "securitysmith-analytics" }
ss-calendar = { path = "crates/calendar", package = "securitysmith-calendar" }
ss-news = { path = "crates/news", package = "securitysmith-news" }
ss-checklists = { path = "crates/checklists", package = "securitysmith-checklists" }
ss-compliance = { path = "crates/compliance", package = "securitysmith-compliance" }
ss-time-tracking = { path = "crates/time-tracking", package = "securitysmith-time-tracking" }
ss-email = { path = "crates/email", package = "securitysmith-email" }
