[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/workspace",
    "crates/frontmatter",
]

[workspace.package]
version = "0.2.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { package = "yaml_serde", version = "0.10" }
chrono = "0.4"
thiserror = "2"
camino = { version = "1.1", features = ["serde1"] }
toml = "1"
pulldown-cmark = "0.13"
clap = { version = "4", features = ["derive"] }
dirs = "6"
tempfile = "3.27.0"
typst = "0.15"
typst-as-lib = "0.16"
typst-pdf = "0.15"
typst-assets = { version = "0.15", features = ["fonts"] }
sha2 = "0.11"
quick-xml = "0.41"
csv = "1.3"
chacha20poly1305 = "0.11"
rand = "0.8"
argon2 = "0.5"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
rpassword = "7.3"

ss-workspace = { path = "crates/workspace", package = "securitysmith-workspace" }
ss-frontmatter = { path = "crates/frontmatter", package = "securitysmith-frontmatter" }
sm = { path = "crates/cli" }

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1