[package]
name = "securitysmith"
version = "0.1.0"
description = "A desktop application for managing security engagements. Designed for security consultants and pentesters"
authors = ["Raghunath"]
edition = "2024"

[lib]
name = "securitysmith_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = [] }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ss-core = { workspace = true }
ss-parsers = { workspace = true }
ss-report-engine = { workspace = true }
ss-templates = { workspace = true }
ss-reports = { workspace = true }
ss-documents = { workspace = true }
ss-invoices = { workspace = true }
ss-ai = { workspace = true }
ss-analytics = { workspace = true }
ss-calendar = { workspace = true }
ss-news = { workspace = true }
ss-checklists = { workspace = true }
ss-compliance = { workspace = true }
ss-time-tracking = { workspace = true }
ss-email = { workspace = true }
