[package]
name = "securitysmith-ai"
description = "SecuritySmith component"
version = "0.1.0"
edition = "2024"

[lib]
name = "securitysmith_ai"

[dependencies]
tokio = { workspace = true }
rand = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
ss-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
