[package]
name = "securitysmith"
version.workspace = true
edition.workspace = true
default-run = "sm"

[[bin]]
name = "sm"
path = "src/main.rs"

[[bin]]
name = "gen-man"
path = "src/bin/gen-man.rs"

[dependencies]
clap = { workspace = true }
ss-workspace = { workspace = true }
ss-frontmatter = { workspace = true }
camino = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
clap_mangen = "0.3.0"

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = "2"
predicates = "3"