[package]
description = "SecuritySmith component"
name = "securitysmith-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "securitysmith_core"
crate-type = ["lib"]

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
argon2 = { workspace = true }
bip39 = { workspace = true }
aes-gcm = { workspace = true }
aead = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
csv = { workspace = true }
zip = { workspace = true }
image = { workspace = true }
reqwest = { workspace = true }
ss-parsers = { workspace = true }
tempfile = { workspace = true }
validator = { workspace = true }
thiserror = { workspace = true }
