[package]
name = "securitysmith-email"
description = "SecuritySmith component"
version = "0.1.0"
edition = "2024"

[lib]
name = "securitysmith_email"

[dependencies]
chrono = { workspace = true }
rusqlite = { workspace = true }
lettre = { workspace = true }
ss-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
