[package]
name = "securitysmith-workspace"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
